# windows_sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  lib.rs  main.rs  result
scripts/: manifest_url
