[package]
name = "windows_sdk"
version = "0.0.0"
edition = "2021"
rust-version = "1.56"
publish = false
license = "MIT"

[lib]
name = "windows_sdk"
path = "lib.rs"

[[bin]]
name = "windows_sdk"
path = "main.rs"

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["color"] }
duct = "0.13"
hex = "0.4"
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
url = { version = "2", features = ["serde"] }
walkdir = "2"
