[package]
name = "windows_sdk"
version = "0.0.0"
edition = "2021"
rust-version = "1.56"
publish = false
license = "MIT"

[lib]
name = "windows_sdk"
path = "lib.rs"

[[bin]]
name = "windows_sdk"
path = "main.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
digest = "0.10"
duct = "0.13"
futures = "0.3"
hex = { version = "0.4", features = ["serde"] }
indicatif = "0.16"
indexmap = { version = "1.8", features = ["serde"] }
rayon = "1.5"
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls", "stream", "trust-dns"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
walkdir = "2"
